Fix: card position on mobile

--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -60,3 +60,15 @@
   padding: 6px;
   width: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+  .card {
+    flex: 100%; 
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  .addtocart {
+    padding: 10px;
+  }
+}
