--- a/src/components/ProductSection/ProductSection.css
+++ b/src/components/ProductSection/ProductSection.css
@@ -16,3 +16,9 @@
   margin: auto;
   margin-bottom: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+  .product-section {
+    padding: 10px;
+  }
+}
